fix(component): shrink comment if it's too long
it's not allowed to click (strictly saying, not perform any action) more
button on comment until implement detail-post-section

--- a/src/components/post/index.scss
+++ b/src/components/post/index.scss
@@ -127,6 +127,15 @@ $static-folder-url: '../../static';
         font-weight: bolder;
         margin-right: 4px;
       }
+
+      &__Comment {
+        &__More {
+          margin-left: 2px;
+          word-wrap: normal;
+          word-break: keep-all;
+          color: #606060;
+        }
+      }
     }
   }
 
